2023-02-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  Fix bug #3382.
	* support/regression/tests/*.c,
	  src/*:
	  Spelling fixes for comments, from patch #459 by Konstantin Kim.

2023-02-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCicode.c,
	  support/regression/tests/bug-2776.c,
	  support/regression/tests/bug-3368.c:
	  Fix bugs #2776, #3378.

2023-02-06 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCicode.c,
	  support/regression/tests/bug-3352.c:
	  Fix bug #3352.
	* device/lib/sm83/crt0.s:
	  Fix bug #3548.
	* support/regression/tests/gcc-torture-execute-pr91137.c:
	  Fix bug #3549.
	* support/regression/tests/bug1723128.c:
	  Fix bug #3550.

2023-02-05 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  support/regression/tests/bug-3547.c:
	  Fix bug #3547.

2023-02-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCC.y:
	  Warn on deprecated _sdcc_external_startup, RFE #868.
	* device/lib/printf_large.c,
	  .version,
	  doc/sdccman.lyx,
	  support/regression/tests/snprintf.c.in:
	  Fix endiannness of %p output, based on patch #457 by Basil Hussain, bug #3543.
	* src/SDCCast.c,
	  src/SDCCglue.c,
	  support/valdiag/tests/bug-3060.c:
	  Fix bug #3060.
	* src/SDCCpeeph.c:
	  Fix bug #3545.

2023-02-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/cases/Makefile.in:
	  Disable a test that often times out on slower machines in the compile farm (due a large number of slow operations in a loop).

2023-02-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3249.c:
	  Do not test non-intrinsic named address space areas for mcs51, as DATA is overwritten by stack there.
	* support/regression/MakeList:
	  Disable a test for -mmcs51 --model-small --stack-auto that is known to fail for mcs51 with --stack-auto (bug #3540).
	* src/SDCCglue.c,
	  support/regression/tests/bug-1981238.c: